<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_explore_your_dream_food">Hello! Explore your dream food</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="login">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="your_address">Your Address</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="have_account">Have Account ?</string>
    <string name="sent_new_password">Sent new password</string>
    <string name="back">Back</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="s_t_c">S T C</string>
    <string name="myfood_gmail_com">myfood@gmail.com</string>
    <string name="_10_10_23_00">10:10 - 23:00</string>
    <string name="todo">TODO</string>
    <string name="_5_0">5.0</string>
    <string name="todo1">TODO</string>
    <string name="product_name">Product Name</string>
    <string name="min_45">Min - $45</string>
    <string name="imagefood">imagefood</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here</string>
    <string name="view_more">view more</string>
    <string name="_10_weekend_delicious_ndinner_recipes">10 weekend Delicious \nDinner Recipes</string>
    <string name="make_order">Make Order</string>
    <string name="my_cart1">My Cart</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="cart_empty_state">Your cart is empty</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="cart_item_removed">Item removed from cart</string>
    <string name="order_created_success">Order created successfully</string>
    <string name="order_created_fail">Unable to create order</string>
    <string name="order_requires_login">Please login to place an order</string>
    <string name="order_history">Order History</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_status_received">Đã nhận</string>
    <string name="order_status_completed">Hoàn thành</string>
    <string name="order_status_cancelled">Hủy</string>
    <string name="order_created_at">Created at</string>
    <string name="order_total">Total</string>
    <string name="admin_dashboard_title">Admin Dashboard</string>
    <string name="manage_users">Manage Accounts</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="manage_foods">Manage Foods</string>
    <string name="open_customer_app">Open Customer View</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="deleted_success">Deleted successfully</string>
    <string name="action_failed">Action failed</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="saved_success">Saved successfully</string>
    <string name="validation_required">Please fill all required fields</string>
    <string name="validation_password">Password must be at least 6 characters</string>
    <string name="order_items">Order Items</string>
    <string name="image_resource_hint">Image resource name (e.g. pizza1)</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="image_not_found">Image not found, using previous image</string>
    <string name="add_food">Add Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="unknown_user">Unknown user</string>
    <string name="logout">Log out</string>
    <string name="user_profile">Profile</string>
    <string name="phone_number">Phone number</string>
    <string name="address_label">Address</string>
    <string name="update_profile">Update profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="profile_update_failed">Unable to update profile</string>
    <string name="profile_not_logged_in">Please login to view profile</string>
</resources>
