<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/baseline_all_inclusive_24"
            android:title="@string/daily_meal" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/rounded_garden_cart_24"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/baseline_receipt_long_24"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>
