<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/input_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/input_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/input_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/input_user_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_address"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/input_user_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</ScrollView>
